5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1613_2425.log
== TEST (2019-03-29 12:27:58) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG+M
M=("km/l")
print(round(CM, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    CM= d/CG+M
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:28:28) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG+M
M=print("km/l")
print(round(CM, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    CM= d/CG+M
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:28:43) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=print("km/l")
print(round(CM, 3))
-- OUTPUT:
km/l
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:29:18) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=("km/l")
print(round(CM+M, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(CM+M, 3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:30:01) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=("km/l")
print(float(round(CM+M, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(round(CM+M, 3)))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:31:14) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG

print(str(round(CM+"km/l", 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(str(round(CM+"km/l", 3)))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:32:14) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=min("km/l")
print(str(round(CM+M, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(str(round(CM+M, 3)))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:33:09) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=min("km/l")
print(str(round(CM, 3)+M))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(str(round(CM, 3)+M))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:33:33) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=min("km/l")
print((round(CM, 3))
-- ERROR:
File "XXXX", line 6
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:33:50) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=min("km/l")
print(round(CM, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:34:17) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=min("km/l")
print(round(CM, 3))+(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(CM, 3))+(M)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:34:30) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
M=min("km/l")
print(round(CM, 3))+print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(CM, 3))+print(M)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:35:21) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
print(round(CM, 3))+print("km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(CM, 3))+print("km/l")
TypeError: unsupported operand type(s) for +: 'NoneType' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:35:53) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
print(round(CM "km/l", 3))
-- ERROR:
File "XXXX", line 4
    print(round(CM "km/l", 3))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:41:49) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
print(round(CM, 3, "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(CM, 3, "km/l"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:42:23) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
print(round(CM, 3, "km/l.lower()"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(CM, 3, "km/l.lower()"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:42:34) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
print(round(CM, 3 "km/l.lower()"))
-- ERROR:
File "XXXX", line 4
    print(round(CM, 3 "km/l.lower()"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:44:16) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= print("km/l")
CM= d/CG+var
print(round(CM, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    CM= d/CG+var
TypeError: unsupported operand type(s) for +: 'float' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:44:36) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= print("km/l")
CM= d/CG + var
print(round(CM, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    CM= d/CG + var
TypeError: unsupported operand type(s) for +: 'float' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:45:05) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= print("km/l")
nome type
CM= d/CG + var
print(round(CM, 3))
-- ERROR:
File "XXXX", line 4
    nome type
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:45:34) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= print("km/l")
nome type
CM= d/CG + var
nome type(print(round(CM, 3)))
-- ERROR:
File "XXXX", line 4
    nome type
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:45:42) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= print("km/l")
CM= d/CG + var
nome type(print(round(CM, 3)))
-- ERROR:
File "XXXX", line 5
    nome type(print(round(CM, 3)))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:47:44) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var="km/l"
CM= d/CG
nome type(print(round(CM, 3)))
-- ERROR:
File "XXXX", line 5
    nome type(print(round(CM, 3)))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:48:08) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var="km/l"
CM= d/CG
print(round(CM, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:48:49) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var="km/l"
CM= d/CG
print(round(CM, 3)+var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(CM, 3)+var)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:49:11) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var=print("km/l")
CM= d/CG
print(round(CM, 3)+var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(CM, 3)+var)
TypeError: unsupported operand type(s) for +: 'float' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:28:47) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= "km/l"
CM= d/CG+var
print(round(CM, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    CM= d/CG+var
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:06) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= "km/l"
CM= d/CG+var
print(round(CM, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    CM= d/CG+var
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:31:08) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= "km/l"
CM= d/CG
CNG= CM+var
print(round(CNG, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    CNG= CM+var
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:32:30) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
var= "km/l"
CM= d/CG
print(round(CM, 3, +"km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(CM, 3, +"km/l"))
TypeError: bad operand type for unary +: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:02:59) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
print(round(CM, 3))
print("km/l")
-- OUTPUT:
14.286
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:03:06) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
print(round(CM, 3))
print("km/l")
-- OUTPUT:
14.286
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:03:13) 
-- CODE:
d=float(input("escolha um numero"))
CG=float(input("escolha um numero"))
CM= d/CG
print(round(CM, 3))
print("km/l")
-- EXECUTION TIME:
0.226559
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
